# mg-team-eurobot

./: .gitignore  README.md  SIFRE  clienttest.py  mega_serial.py  plot_coordinates.py  test.py
camera/: CMakeLists.txt  camera.cpp
camera-api/client/: camera_client.py
camera-api/server/: run.py
camera-api/server/application/: main.py
camera-api/server/camera/: obstacletr.py
firmware/Encoder/: NucleoSetup.c  NucleoSetup.h  Print.c  Print.h  TIM_EncMode.c  TIM_EncMode.h  encoder.uvguix.Korisnik  encoder.uvguix.Kosta Stojanovic  encoder.uvoptx  encoder.uvprojx  main.c
firmware/Encoder F446RE/: Encoder F446RE.uvguix.Korisnik  Encoder F446RE.uvguix.Kosta Stojanovic  Encoder F446RE.uvoptx  Encoder F446RE.uvprojx  NucleoSetup.c  NucleoSetup.h  Print.c  Print.h  TIM_EncMode.c  TIM_EncMode.h  main.c
firmware/Encoder F446RE/Listings/: Encoder F446RE.map
simulation/: functions.py  import_data.py  python_serial.py  system.py  wheel_encoder.py
simulation/encoder_data/: testing.csv
src/: AI_client.py  canvas_testing.py  odometry_service.py  pure_pursuit_client.py  rrt_client.py  test.py
src/Behaviors/: Behavior.py  Behavior_template.py
src/Lidar/: CMakeLists.txt  fastestrplidar.py  fastestrplidar_wrap.cxx  lidar.cpp  lidar.py
src/PurePursuitTest/: Application.py  Obstacle.py  Robot.py
src/RT-RRT/: main.cpp  setup.py
testing/: AI.py  AI_client.py  canvas_testing.py  odometry_client.py  odometry_service.py  pure_pursuit_client.py  rrt_client.py
testing/PurePursuitTest/: Application.py  Obstacle.py  Robot.py  pure_pursuit_client.py
(+27 files in other folders)
